--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     height: 30px;
     line-height: 30px;
     text-align: center;
+    box-shadow: 3px 2px black;
 }
 #versus {
     display: block;
@@ -18,6 +19,8 @@ body {
 
 #versus {
     display: block;
+    position: relative;
+    top: -50px;
 }
 
 #contentScoreboard {
@@ -31,8 +34,8 @@ body {
 #contentPlayer2 {
     display: inline-block;
     position: relative;
-    top: -90px;
-    left: 247px;
+    top: -95px;
+    left: 248px;
 }
 
 #labelP1, #labelP2 {
@@ -40,6 +43,10 @@ body {
     left: 77px;
 }
 
-#player1Plus {
-    
+#player1Plus, #player1Minus, #player2Plus, #player2Minus {
+    width: 30px;
+    margin-top: 5px;
+}
+#player1Plus, #player2Plus {
+    margin-left: 70px;
 }
