--- a/style.css
+++ b/style.css
@@ -1,52 +1,51 @@
-body {
-    background-color: #eee;
-}
+    body {
+        background-color: #eee;
+    }
 
-#player1Scoreboard, #player2Scoreboard {
-    border: solid 0.1em;
-    width: 200px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    box-shadow: 3px 2px black;
-}
-#versus {
-    display: block;
-    position: relative;
-    top: -48px;
-    left: 220px;
-}
+    #player1Scoreboard, #player2Scoreboard {
+        border: solid 0.1em;
+        width: 200px;
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        box-shadow: 3px 2px black;
+    }
+    #versus {
+        display: block;
+        position: relative;
+        top: -48px;
+        left: 220px;
+    }
 
-#versus {
-    display: block;
-    position: relative;
-    top: -50px;
-}
+    #contentScoreboard {
+        display: block;
+        position: absolute;
+        top: 300px;
+        left: 200px;
+        user-select: none;
+    }
 
-#contentScoreboard {
-    display: block;
-    position: absolute;
-    top: 300px;
-    left: 200px;
-    user-select: none;
-}
+    #contentPlayer2 {
+        display: inline-block;
+        position: relative;
+        top: -95px;
+        left: 248px;
+    }
+/*
+    #labelP1, #labelP2 {
+        position: relative;
+        left: 77px;
+    }*/
 
-#contentPlayer2 {
-    display: inline-block;
-    position: relative;
-    top: -95px;
-    left: 248px;
-}
+    #player1Plus, #player1Minus, #player2Plus, #player2Minus {
+        width: 30px;
+        margin-top: 5px;
+    }
+    #player1Plus, #player2Plus {
+        margin-left: 70px;
+    }
 
-#labelP1, #labelP2 {
-    position: relative;
-    left: 77px;
-}
-
-#player1Plus, #player1Minus, #player2Plus, #player2Minus {
-    width: 30px;
-    margin-top: 5px;
-}
-#player1Plus, #player2Plus {
-    margin-left: 70px;
-}
+    .playerNameStyle {
+        width: 200px;
+        text-align: center;
+    }
